HTTP Request catre ruta de GetData
Hardcodat pe ip-ul 192.168.1.132.

Async Task care face get-ul pe ruta corespunzatoare, cu api key-ul
introdus si cu userToken-ul generat.

--- a/ModulComunicatie/res/values/strings.xml
+++ b/ModulComunicatie/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="crypt_button">Cripteaza</string>
     <string name="crypt_text">Text Criptat</string>
     <string name="rezultat_httpGet">Rezultat HTTP Get</string>
+    <string name="conectat">Conectat la internet?</string>
 
 </resources>
