Nume aplicatie client
modificat nume aplicatia client

--- a/Rplus/res/values/strings.xml
+++ b/Rplus/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Rplus</string>
+    <string name="app_name">Aplicatia Client</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="buton1">Login cu R+</string>
